# loongshield

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .yamlfmt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  run_tests.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-check.yml  build-rpm.yml  ci.yml  commit-title-check.yml  format-check.yml  release.yml
LICENSES/: LPeg-MIT.txt  QUEUE-BSD-3-Clause.txt  TREE-BSD-2-Clause.txt
cmake/modules/: CompilerFlags.cmake  Dependencies.cmake  FindDBus.cmake  FindSystemd.cmake  LuaBinding.cmake  Platform.cmake
docs/: README.md
docs/design/: agentos-seharden-design.md  boot-and-runtime-flow.md  clean-architecture.md  lua-lsm-native-support.md  rpm-verification-design.md  runtime-architecture.md  seharden-enforcer-guidelines.md
docs/developer/: README.md  build-and-test.md  coding-standards.md  docker-development.md  roadmap.md  seharden-refactor-plan.md  submodule-sources.md
docs/reference/: loongshield-cli.md  lua-lsm-cli.md  rpm-cli.md  seharden-cli.md  seharden-profile-format.md
docs/skill/: agent-sec-seharden.md
profiles/lua-lsm/: deny_tmp_marker.lua  manifest.yml
profiles/seharden/: agentos_baseline.yml  cis_alinux_3.yml  dengbao_3.yml
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  build.lua  debug.c  debug.h  lua_archive.c  lua_audit.c  lua_capability.c  lua_dbus.c  lua_fanotify.c  lua_fs.c  lua_kmod.c  lua_magic.c  lua_mount.c  lua_rpm.c  lua_systemd.c  lua_xattr.c  luajit.c  lualibs.c  luauxlib.c  luauxlib.h  main.c  ramfs.c
src/daemon/modules/: init.lua
src/daemon/modules/lua_lsm/: cli.lua  init.lua  policy.lua  readiness.lua  securityfs.lua
src/daemon/modules/lyaml/: explicit.lua  functional.lua  implicit.lua  init.lua
src/daemon/modules/net/: uvcurl.lua
src/daemon/modules/rpm/: checksum.lua  cli.lua  db.lua  init.lua  sbom.lua  verify.lua
src/daemon/modules/runtime/: log.lua  ramfs.lua  version.lua  version.lua.in
src/daemon/modules/seharden/: account_files.lua  cli.lua  comparators.lua  enforcerloader.lua  engine.lua  evaluator.lua  init.lua  key_value_file.lua  loader.lua  output.lua  package_inventory.lua  pam_common.lua  path_list.lua  probeloader.lua  profile.lua  rule_executor.lua  rule_schema.lua  user_defaults.lua
src/daemon/modules/seharden/enforcers/: audit.lua  file.lua  fsutil.lua  kmod.lua  mounts.lua  packages.lua  pam.lua  permissions.lua  services.lua  sudo.lua  sysctl.lua  users.lua
src/daemon/modules/seharden/pam/: common.lua  faillock.lua  modules.lua  password_history.lua  pwquality.lua  unix.lua  wheel.lua
src/daemon/modules/seharden/parsers/: pam.lua  sudoers.lua
src/daemon/modules/seharden/probes/: aide.lua  audit.lua  authselect.lua  boot.lua  chrony.lua  crypto_policy.lua  file.lua  firewalld.lua  journald.lua  kmod.lua  logging.lua  meta.lua  mounts.lua  network.lua  packages.lua  pam.lua  permissions.lua  services.lua  shell.lua  ssh.lua  sudo.lua  sysctl.lua  syslog.lua  system.lua  users.lua
src/daemon/modules/seharden/shared/: account_files.lua  config_paths.lua  key_value_file.lua  package_inventory.lua  path_list.lua  systemctl.lua  template.lua  text.lua  umask_policy.lua  util.lua
src/daemon/modules/util/: timer.lua
src/kmod/: Makefile  README.md  ctor.c  ctor.h  debug.c  debug.h  filter.c  filter.h  flt_kernel.c  kmain.c  refcount.h  rwlock.h  securityfs.c  securityfs.h
src/lib/: queue.h
tests/: dbus.lua  run.lua  uvcurl.lua
tests/e2e/: test_loongshield_cli.lua  test_lua_lsm_privileged.lua
tests/e2e/seharden/: test_reinforce_file.lua
tests/integration/: test_seharden_engine_logic.lua  test_xattr.lua
tests/integration/lua_lsm/: test_securityfs_flow.lua
tests/integration/seharden/: test_file.lua  test_seharden_engine.lua  test_seharden_engine_logic.lua  test_seharden_process.lua  test_sysctl.lua  test_users.lua
tests/manual/: archive.lua  capability.lua  dbus.lua  kmod.lua  lua_lsm.lua  mount.lua  rpm.lua  sign.lua  uvcurl.lua
tests/unit/: test_fs.lua  test_kmod.lua  test_meta.lua  test_packages.lua  test_permissions.lua  test_profiles.lua  test_rpm_checksum.lua  test_rpm_cli.lua  test_seharden_cli.lua  test_seharden_loaders.lua  test_seharden_parsers.lua  test_seharden_path_list.lua  test_seharden_profile.lua  test_seharden_reinforce.lua  test_seharden_umask_policy.lua  test_seharden_user_defaults.lua  test_sudo.lua  test_system.lua  test_yaml.lua
tests/unit/lua_lsm/: test_policy.lua  test_securityfs.lua
tests/unit/rpm/: test_rpm_checksum.lua  test_rpm_sbom.lua  test_rpm_verify.lua
tests/unit/seharden/: test_aide.lua  test_audit.lua  test_authselect.lua  test_boot.lua  test_chrony.lua  test_comparators.lua  test_config_paths.lua  test_crypto_policy.lua  test_file_probe.lua  test_firewalld.lua  test_journald.lua  test_kmod.lua  test_logging.lua  test_mounts.lua  test_network.lua  test_packages.lua  test_pam.lua  test_permissions.lua  test_profiles.lua  test_seharden_enforcers.lua  test_seharden_path_list.lua  test_seharden_rule_schema.lua  test_seharden_user_defaults.lua  test_services.lua  test_shell.lua  test_ssh.lua  test_sudo.lua  test_syslog.lua  test_users.lua
tools/ci/: check-commit-title.sh
tools/format/: clang-format.yaml  run.sh  stylua.toml
